<resources>
    <string name="app_name">LocationFinder</string>
    <string name="action_settings">Settings</string>

    <string name='current_location'>Your current location is</string>
    <string name="update_location">Update</string>
    <string name="location_placeholder">Location goes here</string>

    <string name="title">Location Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_title">Welcome to the app</string>
    <string name="app_description">It is an app with various features</string>
    <string name="button_description">Such as these two buttons which you can press on!</string>
    <string name="button_1_label">This one</string>
    <string name="button_2_label">That one</string>
    <string name="button_1_toast">You pressed this button!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello location fragment</string>
    <string name="location_title">Location</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="location_disabled_info">This app has not been given permissions to access the device location. Please use the system settings to give location access for use of this feature.</string>
    <string name="save_current_location">Save Current Location</string>
    <string name="get_current_distance_to_saved_location">Get current distance to saved location</string>
    <string name="distance_to_saved_label">Distance from current to saved:</string>
    <string name="last_saved_position_label">Last saved position:</string>
    <string name="need_saved_location">Save a location to calculate the distance from it.</string>
    <string name="pending_location">Pending…</string>
    <string name="failed_to_get_location">Failed to receive GPS location value. Retrying...</string>
</resources>