<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        />

    <GridLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:columnCount="2"
        android:rowCount="4"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/location_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/current_location"
            />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/location_placeholder"
            android:padding="24dp"
            />
    </GridLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_location"
        />
</LinearLayout>